     and variable.team_name.
   * added [label] inside [event]
   * added 'zoc' key to unit types
   * added 'set_hp' and 'set_total' to unit modifications
   * allowed increase on hp to use %.
   * attack animations can now be filtered on hit an miss
   * [effect] can modify attack/defense weight
   * change in the [sound] tag. sounds must now be part of animation
 * miscellaneous changes
   * added a --load FILE command-line option, where FILE is a saved game
     in the standard save game directory.
   * reordered macro calls in game.cfg to fix no-AMLA bug for campaigns
   * {abilities.cfg} call moved from utils.cfg to game.cfg for consistency
   * Send message on player ban or kick
   * Show a message when a player leaves a game.
   * WML-generated units with "random_traits" now show the traits description
   * flags on village don't "flicker" at the end of their animations
   * really fix bug 3388, now really centering on image when clicking it
   * tab completion now completes to smallest substring, and show possible
     completions
   * added whisper (/msg) support for lobby and observers in game
   * Added ignore list on MP
   * MP server only accepts nicks made from alphanumeric and underscore
     characters
   * force a refresh after calls to ONSCREEN scrolls, to avoid refresh
     problems.
   * add sort_topics command to the WML of help
   * check in ai code that ai doesn't use the same unit to attack twice

Version 1.1.1:
 * campaigns
   * reordered ranks to reflect relevance to game world
   * new (beginner) campaign: Two Brothers
   * Heir to the Throne
     * Gryphons are not available until you find dwarves to ride them
     * Fixed behavior of sleeping gryphons in Gryphon Mountain
     * Changed confusing dialog on Home of the North Elves (#5006)
     * Standardized wording for bonus victory objectives
     * Lost General map now slightly more friendly to smallfoot units
     * Sceptre of Fire - more villages and dirt road near starting castle