@@ -496,6 +496,7 @@ Laurent Birtz
 Patrick Parker (Sapient)
 Rocco J Carello (rogue)
 Tomasz Sikorski (Tomsik)
+Joeri Melis
 "
 [/about]
 
