@@ -296,6 +296,7 @@ Version 1.1.2:
    * [effect] can modify attack/defense weight
    * change in the [sound] tag. sounds must now be part of animation
  * miscellaneous changes
+   * added a very simple progress bar while loading
    * added a --load FILE command-line option, where FILE is a saved game
      in the standard save game directory.
    * reordered macro calls in game.cfg to fix no-AMLA bug for campaigns
